# SkillsBox

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: UPDATES.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  project_link.rs  skill_fs.rs  vault.rs
src/components/: CreateModal.tsx  EnableModal.tsx  GhostIconButton.tsx  Icons.tsx  ImportModal.tsx  ProjectWorkspace.tsx  SettingsView.tsx  SkillBodyModal.tsx  SkillDetail.tsx  SkillList.tsx  Toast.tsx  WindowControls.tsx
src/hooks/: useCollapsedGroups.ts  useFavorites.ts  useRecentProjects.ts  useSidebarResize.ts  useTheme.ts
src/i18n/: README.md  context.tsx  index.ts  registry.ts  types.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/lib/: api.ts  constants.ts  gitUrl.ts  skills.ts  types.ts  updater.ts
